<resources>
    <string name="app_name">MHGU资料</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">搜索</string>
    <string name="search_equip">装备搜索</string>
    <string name="search_jewelry">技能珠搜索</string>
    <string name="search_skill">技能搜索</string>
    <string name="has_new_version">有可更新的版本</string>
    <string name="dialog_temp">最新版本：%s</string>
    <string name="cancel">以后再说</string>
    <string name="fir_update">FIR更新</string>
    <string name="version_temp">当前版本：%s</string>
    <string name="version_getting">检查更新中，请稍后</string>
    <string name="github_update">GitHub更新</string>
    <string name="psd_copied">密码已经复制到剪贴板</string>
    <string name="baidu_update">百度网盘更新</string>
    <string name="update">版本更新</string>
    <string name="baidu_psd">密码(点击复制到剪贴板)：5iqt</string>
    <string name="index">索引</string>
    <string name="index_weapon">武器</string>
    <string name="index_armour">装备</string>
    <string name="index_material">道具</string>
    <string name="index_cat">猎猫</string>
    <string name="index_skill">技能</string>
    <string name="index_monster">怪物</string>
    <string name="index_map">地图</string>
    <string name="index_quest">任务</string>
    <string name="index_cat_rice">猫饭</string>
    <string name="open">开启</string>
    <string name="close">关闭</string>
    <string name="reduce">-</string>
    <string name="add">+</string>
    <string name="set_equip">配装</string>
    <string name="jewelry">技能珠</string>
    <string name="clear_all">清空</string>
    <string name="clear_jewelry">清空技能珠</string>
    <string name="clear_equip">清空装备</string>
    <string name="save">保存配装</string>
    <string name="load_custom_equip_set">加载自定义配装</string>
    <string name="hint_amulet_skill">请输入护符技能，如痛6达10</string>
    <string name="confirm">确定</string>
    <string name="equip_values">防御：%1$s,最大防御：%2$s\n火抗：%3$s，水抗：%4$s，冰抗：%5$s，电抗：%6$s，龙抗：%7$s</string>
    <string name="null_input_alert">技能不能为空</string>
    <string name="sort">排序 :</string>
    <string name="head">头</string>
    <string name="body">胸</string>
    <string name="hand">手</string>
    <string name="leg">腰</string>
    <string name="foot">脚</string>
    <string name="man">男</string>
    <string name="female">女</string>
    <string name="fighter">近战</string>
    <string name="archer">射手</string>
    <string name="equip_by_name">根据装备名搜索</string>
    <string name="query_by_skill">根据技能名搜索</string>
    <string name="query_type">搜索类型 :</string>
    <string name="equip_select_notice">点击选择装备,长按查看装备详情</string>
    <string name="equip_set">配装器</string>
    <string name="text_all">通用</string>
    <string name="permission_alert">因为没有权限，不会加载保存本机的配装，配装在APP删除后也不会保存</string>
    <string name="hint_skill">请输入配装技能,如见3挑2</string>
    <string name="input_skill">请输入技能信息</string>
    <string name="load_default_equip_set">加载常用配装</string>
</resources>
