<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_clear_all"
        android:title="@string/clear_all"
        app:showAsAction="collapseActionView"
        />
    <item
        android:id="@+id/menu_clear_jewelry"
        android:title="@string/clear_jewelry"
        app:showAsAction="collapseActionView"
        />
    <item
        android:id="@+id/menu_clear_equip"
        android:title="@string/clear_equip"
        app:showAsAction="collapseActionView"
        />
    <item
        android:id="@+id/menu_save"
        android:title="@string/save"
        app:showAsAction="collapseActionView"/>

    <item
        android:id="@+id/menu_load_default"
        android:title="@string/load_default_equip_set"
        app:showAsAction="collapseActionView"
        />

    <item
        android:id="@+id/menu_load"
        android:title="@string/load_custom_equip_set"
        app:showAsAction="collapseActionView"
        />
</menu>