<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/ll_parts"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/d32"
        android:layout_marginStart="@dimen/d8"
        android:layout_marginTop="@dimen/d8"
        android:orientation="horizontal"
        >

        <TextView
            style="@style/style_equip_item"
            android:layout_width="@dimen/d32"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/d4"
            android:text="@string/head"
            tools:text="leg"
            />

        <TextView
            style="@style/style_equip_item"
            android:layout_width="@dimen/d32"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/d4"
            android:text="@string/body"
            tools:text="leg"
            />

        <TextView
            style="@style/style_equip_item"
            android:layout_width="@dimen/d32"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/d4"
            android:text="@string/hand"
            tools:text="leg"
            />

        <TextView
            style="@style/style_equip_item"
            android:layout_width="@dimen/d32"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/d4"
            android:text="@string/leg"
            tools:text="leg"
            />

        <TextView
            style="@style/style_equip_item"
            android:layout_width="@dimen/d32"
            android:layout_height="match_parent"
            android:text="@string/foot"
            tools:text="leg"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_archer"
        style="@style/style_equip_item"
        android:layout_width="@dimen/d32"
        android:layout_height="@dimen/d32"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/d8"
        android:layout_marginTop="@dimen/d8"
        android:text="@string/archer"
        tools:text="archer"/>

    <TextView
        android:id="@+id/tv_save"
        style="@style/style_equip_item"
        android:layout_width="@dimen/d32"
        android:layout_height="@dimen/d32"
        android:layout_marginEnd="@dimen/d4"
        android:layout_marginStart="@dimen/d8"
        android:layout_marginTop="@dimen/d8"
        android:layout_toStartOf="@id/tv_archer"
        android:text="@string/fighter"
        tools:text="fight"/>

    <TextView
        android:id="@+id/tv_female"
        style="@style/style_equip_item"
        android:layout_width="@dimen/d32"
        android:layout_height="@dimen/d32"
        android:layout_marginTop="@dimen/d8"
        android:layout_toStartOf="@id/tv_save"
        android:text="@string/female"
        tools:text="woman"/>

    <TextView
        android:id="@+id/tv_man"
        style="@style/style_equip_item"
        android:layout_width="@dimen/d32"
        android:layout_height="@dimen/d32"
        android:layout_marginEnd="@dimen/d4"
        android:layout_marginStart="@dimen/d8"
        android:layout_marginTop="8dp"
        android:layout_toStartOf="@id/tv_female"
        android:text="@string/man"
        tools:text="man"/>

    <TextView
        android:id="@+id/tv_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_parts"
        android:layout_marginStart="@dimen/d8"
        android:layout_marginTop="@dimen/d8"
        android:gravity="center"
        android:padding="@dimen/d8"
        android:text="@string/sort"
        android:textSize="14sp"
        tools:text="sort :"/>

    <com.zhy.view.flowlayout.TagFlowLayout
        android:id="@+id/tfl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_parts"
        android:layout_marginEnd="@dimen/d8"
        android:layout_marginStart="@dimen/d8"
        android:layout_marginTop="@dimen/d8"
        android:layout_toEndOf="@id/tv_sort"
        />


    <TextView
        android:id="@+id/tv_query_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tfl"
        android:layout_marginStart="@dimen/d8"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:padding="@dimen/d8"
        android:text="@string/query_type"
        tools:text="amuletSkill"/>


    <TextView
        android:id="@+id/tv_query_name"
        style="@style/style_equip_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tfl"
        android:layout_marginEnd="@dimen/d4"
        android:layout_marginStart="@dimen/d8"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/tv_query_type"
        android:padding="@dimen/d8"
        android:text="@string/equip_by_name"
        tools:text="equip"/>

    <TextView
        android:id="@+id/tv_query_skill"
        style="@style/style_equip_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tfl"
        android:layout_marginStart="@dimen/d8"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/tv_query_name"
        android:padding="@dimen/d8"
        android:text="@string/query_by_skill"
        tools:text="amuletSkill"/>

    <TextView
        android:id="@+id/tv_notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:padding="@dimen/d4"
        android:text="@string/equip_select_notice"
        android:textColor="@color/colorAccent"
        />

    <include
        android:id="@+id/ll_equip_title"
        layout="@layout/item_equip"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d32"
        android:layout_below="@id/tv_query_skill"
        android:layout_marginTop="@dimen/d8"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/tv_notice"
        android:layout_below="@id/ll_equip_title"
        android:layout_marginTop="@dimen/d4"
        />
</RelativeLayout>